# pfSentinel

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_LICENSES.txt  pyproject.toml  renovate.json
.claude/: settings.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  security.yml
docs/: LICENSE_AUDIT.md  extended-backups.md  installation.md  usage.md
scripts/: build_exe.py
src/pfsentinel/: __init__.py  __main__.py
src/pfsentinel/cli/: app.py  formatters.py  list.py
src/pfsentinel/cli/commands/: backup.py  config.py  device.py  notify.py  schedule.py  update.py
src/pfsentinel/models/: __init__.py  backup.py  config.py  device.py  zfs.py
src/pfsentinel/services/: archive_backup.py  backup.py  connection.py  credentials.py  diff.py  extra_backup.py  notifications.py  orchestrator.py  retention.py  scheduler.py  updater.py  zfs_backup.py
src/pfsentinel/tui/: app.py
src/pfsentinel/tui/screens/: backups.py  dashboard.py  devices.py  logs.py  settings.py
src/pfsentinel/utils/: checksum.py  compression.py  naming.py  platform.py  xml_parser.py
tests/: conftest.py
tests/integration/: test_backup_workflow.py
tests/unit/: test_archive_backup.py  test_backup_models.py  test_backup_service.py  test_checksum.py  test_compression.py  test_config_models.py  test_config_models_extended.py  test_connection.py  test_credentials.py  test_device_models.py  test_diff.py  test_extra_backup.py  test_formatters.py  test_naming.py  test_naming_extended.py  test_notifications.py  test_orchestrator.py  test_platform.py  test_retention_typed.py  test_selective_backup.py  test_ssh_extended.py  test_ssh_key_auth.py  test_updater.py  test_verify_typed.py  test_xml_parser.py  test_zfs_backup.py  test_zfs_models.py
