[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pfsentinel"
dynamic = ["version"]
description = "Automated pfSense backup management tool"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [{ name = "nx1x" }]
keywords = ["pfsense", "backup", "firewall", "network", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "typer>=0.15.0,<1",
    "rich>=13.9.0,<14",
    "pydantic>=2.10.0,<3",
    "paramiko>=4.0.0,<5",
    "httpx>=0.28.0,<1",
    "pyyaml>=6.0.0,<7",
    "cryptography>=46.0.5,<47",
    "loguru>=0.7,<1",
    "packaging>=24.0,<25",
    "requests>=2.31.0,<3",
    "keyring>=25.0,<26",
    "keyrings.alt>=5.0,<6",
    "lxml>=6.1.0,<7",
    "schedule>=1.2,<2",
]

[project.urls]
Homepage = "https://github.com/NX1X/pfSentinel"
Repository = "https://github.com/NX1X/pfSentinel"
"Bug Tracker" = "https://github.com/NX1X/pfSentinel/issues"
Changelog = "https://github.com/NX1X/pfSentinel/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "ruff>=0.11,<0.12",
    "pytest>=8.3.0,<9",
    "pytest-cov>=6.0.0,<7",
    "responses>=0.25.0,<1",
    "mypy>=1.14.0,<2",
    "types-paramiko>=3.5.0,<4",
    "types-pyyaml>=6.0.0,<7",
    "pip-audit>=2.7.0,<3",
    "pip-tools>=7.4.0,<8",
]

[project.scripts]
pfs = "pfsentinel.cli.app:main_entry"

[tool.hatch.version]
path = "src/pfsentinel/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pfsentinel"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]
ignore = ["UP040", "B904", "B008", "B017", "SIM102", "SIM105", "SIM108", "SIM117", "E501", "F841", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["pfsentinel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
addopts = "--strict-markers"

[tool.coverage.run]
source = ["pfsentinel"]

[tool.coverage.report]
fail_under = 60
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
